# stock-brokers

./: .gitignore  deleteme.toml  pyproject.toml  requirements.txt  setuppy.txt
bypass/: bypass.py
fake/: fake.py
finvasia/: api_helper.py  finvasia.py
stock_brokers/: STOCKOmain.py  base.py  helper.py  strategy.py  symbols.py  wsocket.py
stock_brokers/angelone/: WebSocketOrderUpdate.py  angel_one.py  angel_one.yaml
stock_brokers/bypass/: api_helper.py  bypass.py  bypass.yaml
stock_brokers/fake/: fake.py
stock_brokers/finvasia/: NewNorenApi.py  api_helper.py  finvasia.py  finvasia.yaml  session.py
stock_brokers/flattrade/: NorenApi.py  NorenRestApi-0.0.29-py3-none-any.whl:Zone.Identifier  api_helper.py  flattrade.py  get_session_token.py
stock_brokers/stocko/: __init__.py  stocko.py
stock_brokers/stocko/StockoPI/: LICENSE  README.md  config.py  requirements.txt
stock_brokers/stocko/StockoPI/stocko/: connect.py  protlib.py  selenium_auth.py  stockoapi.py  token.json  wsclient.py
stock_brokers/xts/: Connect.py  MarketDataSocketClient.py  config.ini  xts.py  xts.yaml
stock_brokers/zerodha/: api_helper.py  zerodha.py  zerodha.yaml
xts/: __init__.py  wsocket.py
zerodha/: api_helper.py  zerodha.py
