[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stock-brokers"
version = "0.0.2"
description = "a general stock broker package"
authors = ["darkseid <uberdeveloper001@gmail.com>"]
packages = [
  {include = "bypass"},
  {include = "fake"}, 
  {include = "finvasia"},
  {include = "xts"},
  {include = "zerodha"},
]

[tool.poetry.dependencies]
python = "^3.9"

