[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stock-brokers"
version = "0.0.5"
description = "a general stock broker package"
authors = ["darkseid <uberdeveloper001@gmail.com>"]
packages = [{ include = "stock_brokers" }]

[tool.poetry.dependencies]
python = "^3.9"
